# automata

./: .gitignore  README.md  haskell.cabal
app/: Main.hs
data/: an_b2n_progs.json  an_bm_cnm_progs.json  anbn_plus_progs.json  anbn_progs.json  palindrome_progs.json  wcwr_progs.json
data/qa/: an_bn_cn_progs.json
python/: hf_palindrome.py
rules/: an_b2n.json  an_bm_cnm.json  anbn.json  anbn_plus.json  palindrome.json  palindrome_2.json  wcwr.json
rules/qa/: an_bn_cn.json
src/: Automata.hs  FSM.hs  PDA.hs  QA.hs
src/Data/List/: Extra.hs
src/Data/Map/: Extra.hs
