cabal-version:      3.4
name:               automata

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
homepage:           https://github.com/neurallambda/automata
license:            NONE
author:             neurallambda
maintainer:         neurallambda@proton.me
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable automata
    import:           warnings
    main-is:          Main.hs
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.17.2.1,
        mtl,
        containers,
        random,
        aeson,
        bytestring,
        vector,
        text,
        optparse-applicative,
        automata

    -- exe source files.
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:
      Data.List.Extra,
      Automata,
      PDA

    build-depends:
        base ^>=4.17.2.1,
        mtl,
        containers,
        random,
        bytestring,
        vector,
        text,
        aeson

    hs-source-dirs:   src
    default-language: GHC2021

test-suite haskell-test
    -- Import common warning flags.
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0

    -- test source files
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        automata
